package Decorator;

public abstract class BundleDealDecorator extends BundleDeal {
    public abstract String getDescription();
}