package Decorator;

public class OldRelease extends BundleDeal {
    public OldRelease(){
        description = "Old Release DVD";

    }

    public  double cost(){
        return 2.0;
    }
}
