@startuml

title __DECORATOR's Class Diagram__\n

      abstract class Decorator.BundleDeal {
          ~ description : String
          {abstract} + cost()
          + getDescription()
      }

  

      abstract class Decorator.BundleDealDecorator {
          {abstract} + getDescription()
      }


      class Decorator.DrinkBundle {
          + DrinkBundle()
          + cost()
          + getDescription()
      }

  

      class Decorator.NewRelease {
          + NewRelease()
          + cost()
      }

  

      class Decorator.OldRelease {
          + OldRelease()
          + cost()
}
  


      class Decorator.SnackBundle {
          + SnackBundle()
          + cost()
          + getDescription()
      }

  

  Decorator.BundleDealDecorator -up-|> Decorator.BundleDeal
  Decorator.DrinkBundle -up-|> Decorator.BundleDealDecorator
  Decorator.NewRelease -up-|> Decorator.BundleDeal
  Decorator.OldRelease -up-|> Decorator.BundleDeal
  Decorator.SnackBundle -up-|> Decorator.BundleDealDecorator
  Decorator.BundleDeal --o Decorator.BundleDealDecorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
